@@ -5,7 +5,7 @@
 <!-- without any warranty. -->
 
 <!-- root node -->
-<!ELEMENT ags-simple-file (ags-sf-meta-list, ags-sf-window, ags-sf-config)>
+<!ELEMENT ags-simple-file (ags-sf-meta-list, ags-sf-program-list, ags-sf-window, ags-sf-config)>
 <!ATTLIST ags-simple-file
 	  version          CDATA      #REQUIRED
 	  build-id         CDATA      #REQUIRED
@@ -268,6 +268,22 @@
 
 <!ELEMENT ags-sf-acceleration EMPTY>
 <!ATTLIST ags-sf-acceleration
+	  x               NMTOKEN  #REQUIRED
+	  y               NMTOKEN  #REQUIRED	  
+	  >
+
+<!-- program -->
+<!ELEMENT ags-sf-program-list (ags-sf-program*)>
+
+<!ELEMENT ags-sf-program (ags-sf-timestamp, ags-sf-marker*)>
+<!ATTLIST ags-sf-program
+	  line            NMTOKEN  #REQUIRED
+	  channel-type    CDATA    #REQUIRED
+	  control-name    CATA     #REQUIRED
+	  >
+
+<!ELEMENT ags-sf-marker EMPTY>
+<!ATTLIST ags-sf-marker
 	  x               NMTOKEN  #REQUIRED
 	  y               NMTOKEN  #REQUIRED	  
 	  >
