@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2022 Joël Krähemann
+# Copyright (C) 2005-2023 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -231,6 +231,12 @@ ags_fx_volume_audio_signal_get_type
 ags_fx_volume_channel_get_type
 ags_fx_volume_channel_processor_get_type
 ags_fx_volume_recycling_get_type
+ags_fx_vst3_audio_get_type
+ags_fx_vst3_audio_processor_get_type
+ags_fx_vst3_audio_signal_get_type
+ags_fx_vst3_channel_get_type
+ags_fx_vst3_channel_processor_get_type
+ags_fx_vst3_recycling_get_type
 ags_generic_recall_channel_run_get_type
 ags_generic_recall_recycling_get_type
 ags_gstreamer_client_flags_get_type
@@ -245,6 +251,7 @@ ags_gstreamer_port_get_type
 ags_gstreamer_server_get_type
 ags_hq_pitch_util_get_type
 ags_input_get_type
+ags_instantiate_vst3_plugin_get_type
 ags_ipatch_dls2_reader_get_type
 ags_ipatch_flags_get_type
 ags_ipatch_get_type
@@ -290,6 +297,8 @@ ags_lv2_worker_manager_get_type
 ags_lv2ui_manager_get_type
 ags_lv2ui_plugin_flags_get_type
 ags_lv2ui_plugin_get_type
+ags_marker_flags_get_type
+ags_marker_get_type
 ags_midi_buffer_util_get_type
 ags_midi_builder_get_type
 ags_midi_file_get_type
@@ -354,6 +363,8 @@ ags_port_flags_get_type
 ags_port_get_type
 ags_port_util_get_type
 ags_preset_get_type
+ags_program_flags_get_type
+ags_program_get_type
 ags_pulse_client_flags_get_type
 ags_pulse_client_get_type
 ags_pulse_devin_flags_get_type
@@ -442,6 +453,9 @@ ags_toggle_pattern_bit_get_type
 ags_track_flags_get_type
 ags_track_get_type
 ags_volume_util_get_type
+ags_vst3_conversion_get_type
+ags_vst3_manager_get_type
+ags_vst3_plugin_get_type
 ags_wasapi_devin_flags_get_type
 ags_wasapi_devin_get_type
 ags_wasapi_devout_flags_get_type
@@ -449,3 +463,4 @@ ags_wasapi_devout_get_type
 ags_wave_flags_get_type
 ags_wave_get_type
 ags_wave_loader_get_type
+ags_write_vst3_port_get_type
