@@ -3,7 +3,7 @@
   <head>
     <title>krähemann.com - API</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="http://xn--krhemann-1za.com/style.css" type="text/css">
+    <link rel="stylesheet" href="http://nongnu.org/gsequencer/styles/default.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=11"/>
     <meta name="generator" content="Doxygen $doxygenversion"/>
@@ -26,28 +26,31 @@ $extrastylesheet
   </head>
   <body style="font-family: cantarell, sans-serif; font-size: 100%;">
     <header style="position: fixed; top: 0; left: 0; min-height: 100vh; width: 20rem;">
-      <a href="http://xn--krhemann-1za.com"><img src="http://xn--krhemann-1za.com/image/tree.svg" width="100%" /></a>
+      <div>
+	<p>
+	  <a href="http://nongnu.org/gsequencer"><img src="http://nongnu.org/gsequencer/images/agsly.png" height="140" /></a>
+	</p>
 
-      <h2>krähemann.com</h2>
+	<h2 style="color: #444444;">nongnu.org/gsequencer</h2>
+	<br />
+      </div>
       
       <nav>
 	<div>
-	  <strong>Media</strong><br />
-	  <a href="http://xn--krhemann-1za.com/video.html">Video</a><br />
-	  <a href="http://xn--krhemann-1za.com/audio.html">Audio</a><br />
-	  <a href="http://xn--krhemann-1za.com/blog.html">Blog</a><br />
-	  <a href="http://xn--krhemann-1za.com/links.html">Downloads &amp; Links</a><br />
-	</div><br />
-	<div> 
-	  <strong>Documentation</strong><br />
-	  <a href="http://xn--krhemann-1za.com/howtos.html">Howtos</a><br />
-	  <a href="http://xn--krhemann-1za.com/api.html">API Reference Manual</a><br />
+	  <ul>
+	    <li><a href="index.html">Home</a></li>
+	    <li><a href="screenshots.html">Screenshots</a></li>
+	    <li><a href="http://savannah.nongnu.org/news/atom.php?group=gsequencer">Feed</a></li>
+	    <li><a href="http://savannah.nongnu.org/p/gsequencer">GNU Savannah</a></li>
+	    <li><a href="wallpapers.html">Wallpapers</a></li>
+	    <li><a href="help.html">Help</a></li>
+	    <li><a href="about.html">About</a></li>
+	  </ul>
 	</div><br />
       </nav>
     </header>
 
-    <main style="margin-left: 20rem; max-width: 65rem;">
-
+    <main style="margin-left: 20rem; max-width: 65rem; background: #ffffff;">
       <!--BEGIN DISABLE_INDEX-->
       <!--BEGIN FULL_SIDEBAR-->
       <div id="side-nav" class="ui-resizable side-nav-resizable"><!-- do not remove this div, it is closed by doxygen! -->
@@ -96,5 +99,4 @@ $extrastylesheet
 	  </div>
 	  <!--END TITLEAREA-->
 	  <!-- end header part -->
-
 	  
