@@ -245,6 +245,18 @@
       <xi:include href="xml/ags_position_wave_cursor_dialog_callbacks.xml"/>
     </chapter>
 
+    <chapter id="tempo-editor">
+      <title>Tempo editor widgets</title>
+      <para>
+	Widgets related to tempo form editor.
+      </para>
+      
+      <xi:include href="xml/ags_tempo_edit.xml"/>
+
+      <xi:include href="xml/ags_ramp_marker_dialog.xml"/>
+      <xi:include href="xml/ags_ramp_marker_dialog_callbacks.xml"/>
+    </chapter>
+
     <chapter id="machine">
       <title>Audio machines</title>
       <para>
