@@ -40,6 +40,25 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="5.1.1" date="2023-05-12">
+      <description>
+	<p>
+	  Implemented tempo editor persistence.
+	</p>
+	<p>
+	  Fixed automation persistence restore.
+	</p>
+      </description>
+    </release>
+
+    <release version="5.1.0" date="2023-05-12">
+      <description>
+	<p>
+	  Implemented tempo editor.
+	</p>
+      </description>
+    </release>
+    
     <release version="4.4.3" date="2022-09-27">
       <description>
 	<p>
@@ -47,7 +66,7 @@
 	</p>
       </description>
     </release>
-
+    
     <release version="4.4.2" date="2022-09-17">
       <description>
 	<p>
